--- a/my-react-app/src/components/universalComponents/menu/menu.scss
+++ b/my-react-app/src/components/universalComponents/menu/menu.scss
@@ -1,4 +1,4 @@
-.menu-container{
+.menuContainer{
     background-color: white;
     padding: 58px 28px;
     height: 100vh;
@@ -23,8 +23,32 @@
     gap: 4px;
 }
 .companyName{
+    font-family: var(--font-family-title, Montserrat);
     font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: -1px;
+    color: --Grey-800;
 }
 .accountVersion{
+    font-family: var(--font-family-body, Montserrat);
     font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    color: --Grey-600;
+}
+.singleLink{
+    display: flex;
+    gap: 10px;
+    height: 24px;
+    padding: 16px;
+    align-items: center;
+    align-self: center;
+    font-family: var(--font-family-body, Montserrat);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
 }
