--- a/my-react-app/src/components/universalComponents/menu/menu.scss
+++ b/my-react-app/src/components/universalComponents/menu/menu.scss
@@ -29,7 +29,7 @@
     font-weight: 500;
     line-height: 120%;
     letter-spacing: -1px;
-    color: var(--Grey-800);
+    color: var(--primary-inverse);
 }
 .accountVersion{
     font-family: var(--font-family-body, Montserrat);
@@ -37,7 +37,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    color: var(--Grey-600);
+    color: var(--secondary);
 }
 .singleLink{
     display: flex;
