--- a/my-react-app/src/components/dashboard/ModalCard/modalCard.scss
+++ b/my-react-app/src/components/dashboard/ModalCard/modalCard.scss
@@ -32,7 +32,7 @@
 .moduleInfoHeading{
     display: flex;
     flex-direction: row;
-    align-items: end;
+    align-items: flex-end;
     gap: 20px;
 }
 
@@ -43,6 +43,7 @@
         line-height: 40px;
     }
     .h5{
+        margin-bottom: 4px;
         font-size: 20px;
         line-height: 24px;
         letter-spacing: -1px;
@@ -58,7 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    align-self: stretch;
+    align-self: flex-end;
     gap: 8px;
 
     font-size: 12px;
@@ -88,6 +89,7 @@
 .progressBar{
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 .progressBarText{
     display: flex;
@@ -101,4 +103,13 @@
 .coursesCount{
     color: var(--text-secondary);
     font-size: 12px;
+}
+.progressBarGraph{
+    width: 100%;
+    img{
+        width: 100%;
+        height: 6px;
+        object-fit: cover;
+        display: block;
+    }
 }
