finished first raw on main dashboard!

--- a/my-react-app/src/components/dashboard/CommunityCard/communityCard.scss
+++ b/my-react-app/src/components/dashboard/CommunityCard/communityCard.scss
@@ -32,6 +32,7 @@ $star-icon-left: 50%;
 }
 
 .communityText{
+    color: var(--text-secondary);
     font-family: var(--font-family-body, Montserrat);
     font-size: $text-font-size;
     font-style: normal;
